feat: [CDS-58438]: Login to the cluster before executing the kubeconfig file (#46829)
* feat: [CDS-58438]: Login to the cluster before executing the kubeconfig file.

* feat: [CDS-58438]: adding GOOGLE APPLICATIONS CREDENTIALS.

* feat: [CDS-58438]: setting AZURE_CONFIG_DIR for all auth types.

* feat: [CDS-58438]: fixing UT's

* feat: [CDS-58438]: fixing UT's